--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,11 +1,10 @@
 .navContainer {
-	padding: 15px 60px;
+	padding: 15px 0;
 	height: 70px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	text-align: center;
-
 }
 .navText,
 span {
@@ -27,19 +26,35 @@ a {
 	display: flex;
 	gap: 15px;
 	list-style: none;
-	text-decoration: none;
+	/* text-decoration: none; */
 	font-size: 1.2em;
-	color: #fff;
+	/* color: #fff; */
 	cursor: pointer;
-	
+	/* display: inline-block; */
+	margin-block: 2px;
+	text-decoration: none;
+	font-weight: 600;
+	color: #fff;
+	position: relative;
+	transition: all 1.8s;
 }
 
-.navItens a:hover {
-	background-color: #5ac7f5; 
-	transition: width 2s;
-	transition-delay: 0.5s;
-	border-radius: 3px;
-	
+a::after {
+	content: "";
+	width: 100%;
+	height: 2px;
+	background-color: red;
+	border-radius: 4px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	transform: scaleX(0);
+	transform-origin: left;
+	transition: transform 1s ease;
 }
-
-
+a:hover::after {
+	transform: scaleX(1);
+}
+a:hover {
+	color: red;
+}
