--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #2c5470;
+  background-color: #1b1b1b;
   color: #fff;
+  padding: 0 60px;
 }
