--- a/src/components/Technologies.css
+++ b/src/components/Technologies.css
@@ -17,20 +17,17 @@
     width: 100px;
     height: 100px;
 }
-.card {
+.cardTech {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 20px;
-    border: 4px solid rgba(255, 0, 0, 0.468);
+    border: 4px solid rgba(235, 235, 235, 0.468);
+    border-radius: 10px;
 }
-.card:hover {
+.cardTech:hover {
     box-shadow: rgba(246, 44, 44, 0.987) -5px 5px, rgba(240, 46, 46, 0.474) -10px 10px, rgba(243, 76, 76, 0.377) -15px 15px;
     transition: 1s;
     background-color: rgba(255, 0, 0, 0.33); 
-}
-
-svg:hover {
-    font-size: 30px;
 }
