Adição do Footer e Ajustes nos cards

--- a/src/components/Technologies.css
+++ b/src/components/Technologies.css
@@ -10,12 +10,11 @@
     flex-wrap: wrap;
     padding: 30px;
     gap: 30px;
-    height: 250px;
 }
 
 .cardsContainer svg{
     width: 100px;
-    height: 100px;
+    height: 50%;
 }
 .cardTech {
     display: flex;
